--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "acorn": "^8.5.0"
+    "acorn": "^8.5.0",
+    "babel": "^6.23.0",
+    "babel-template": "^6.26.0",
+    "jscodeshift": "^0.13.0"
   }
 }
